# mirofish-trading

./: .env.example  .gitignore  AGENTS.md  AGENT_CONTEXT.md  Dockerfile  Dockerfile.cloudrun  README.md  cloudbuild.yaml  docker-compose.yml
.agents/skills/deploy-cloudrun/: SKILL.md
.github/workflows/: test.yml
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: llm_agent.py  profiles.py
backend/app/api/: live_routes.py  openbb_routes.py  routes.py
backend/app/models/: market_state.py  order_book.py
backend/app/scenarios/: market_scenarios.py
backend/app/services/: bar_builder.py  databento_client.py  live_session.py  llm_client.py  session_context.py  simulation_manager.py  storage.py  zep_memory.py
backend/openbb/: apps.json  widgets.json
backend/seed_data/: al_brooks_methodology.md
backend/static/: index.html
backend/tests/: test_bar_builder.py  test_config.py  test_llm_client.py  test_llm_parsing.py  test_market_state.py  test_order_book.py  test_session_context.py  test_ws_buffer.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: AgentFlowChart.vue  CandlestickChart.vue
frontend/src/services/: api.js
frontend/src/views/: Dashboard.vue  LiveDashboard.vue  SimDetail.vue
output/20260308_185534/: decision_log.jsonl  results.json  summary.txt
output/20260308_203318/: decision_log.jsonl  results.json  summary.txt
output/20260314_031341/: results.json
scripts/: deploy_cloudrun.sh  run_simulation.py
